--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,18 @@
 body {
     display: flex;
+    flex-direction: column;
 }
+
 footer {
-	background-color: AntiqueWhite;
-	text-align: center;
-	color: brown;
+    display: flex;
+    flex-direction: row;
+    background-color: AntiqueWhite;
+    text-align: center;
+    color: brown;
+}
+
+footer p {
+    margin: 0;
+    padding: 10px;
+    width: 100%;
 }
