--- a/css/stylesPROBANDO.css
+++ b/css/stylesPROBANDO.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     display: flex;
     flex-direction: column;
 }
@@ -15,4 +15,4 @@ footer p {
     margin: 0;
     padding: 10px;
     width: 100%;
-}
+} */
