--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,8 @@ footer {
     color: var(--white-color);
     padding: var(--footer-padding);
     text-align: center;
-    width: 100%;
+    width: calc(100% - 20px);
+    order: 5;
 }
 
 footer p {
@@ -158,14 +159,18 @@ footer p {
 
 .aside_login {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     right: 0;
     top: 0;
     width: var(--width-aside);
-    height: 100%;
+    height: 100vh;
     background-color: var(--background-color);
     padding: var(--content-padding);
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
+    z-index: 1000;
 }
 
 .aside_login h2 {
@@ -177,11 +182,28 @@ footer p {
 }
 
 .aside_login input[type="submit"] {
-    position: static;
-    display: block;
-    font-size: large;
-    margin: 0 ;
-    padding: 5px 40px;
+    position: absolute;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    border: none;
+    border-radius: 5px;
+    margin: 10px auto 20px auto;
+}
+
+.aside_login input[type="submit"]:hover {
+    cursor: pointer;
+}
+
+.aside_login input[type="submit"] {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    border: none;
+    border-radius: 5px;
+    margin: auto;
+}
+
+.info_hotel {
+    margin: auto;
 }
 
 @media screen and (max-width: 930px) {
