--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -1,4 +1,5 @@
 /* Contenido principal */
+
 .main-content {
     max-width: 900px;
     min-width: 580px;
@@ -25,6 +26,7 @@
     max-width: 100%;
     min-width: 380px;
     height: auto;
+    margin: auto;
     margin-top: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -86,11 +88,11 @@
         width: 100%;
     }
 
-    /* .galeria li {
+    .galeria li {
         width: 100%;
         min-width: 300px;
         display: block;
-    } */
+    }
 
 }
 
@@ -99,9 +101,9 @@
         min-width: 380px;
     }
 
-    /* .galeria ul {
-        display: flex;
-        flex-direction: row;
+    .galeria ul {
+        display: flexbox;
+        /* flex-direction: row; */
         justify-content: space-between;
     }
 
@@ -113,5 +115,5 @@
     .galeria img {
         width: 100%;
         align-items: stretch;
-    } */
+    }
 }
