--- a/css/styles.css
+++ b/css/styles.css
@@ -167,26 +167,48 @@ footer a:hover {
     color: var(--accent-color);
 }
 
-.content {
-    display: inline-flex;
-    min-height: 100vh;
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    /* flex: 1;
+    justify-content: space-between; */
+    /* min-height: 100vh; */
+    position: relative;
     background-color: var(--background-color);
     color: var(--primary-color);
     font-family: var(--font-family);
     font-size: var(--font-size);
     line-height: var(--line-height);
+    /* align-items: center; */
+}
+
+.main-content {
+    /* width: 900px; */
+    /* margin-right: 300px; */
+    width: 70vw;
+    right: 20%;
+    max-width: 1500px;
+    min-width: 580px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: block;
+    right: 11%;
+    position: relative;
 }
 
 .aside_login {
-    position: sticky;
+    position: absolute;
     display: flex;
+    flex: 0 1 auto;
     flex-direction: column;
-    /* height: 100vh; */
-    top: 20%;
-    /* right: 0;
-    top: 0; */
+    /* height: 80vh; */
+    top: 0;
+    right: 0;
+    /* top: 0; */
+    height: 100%;
     width: var(--width-aside);
-    height: 76vh;
+    /* height: 100vh; */
     background-color: var(--background-color);
     padding: var(--content-padding);
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
@@ -194,12 +216,37 @@ footer a:hover {
     z-index: 1000;
 }
 
+.aside_login .login {
+    width: 100%;
+    position: sticky;
+    top: 80px;
+    bottom: 100px;
+    display: block;
+}
+
+.aside_login form {
+    display: block;
+    min-width: 0;
+    width: fit-content;
+    box-sizing: border-box;
+}
+
+.aside_login .info_hotel {
+    position: sticky;
+    top: 500px;
+    /* margin: auto; */
+}
+
 .aside_login h2 {
     color: var(--primary-color);
 }
 
 .aside_login input {
-    width: 50%;
+    width: 100%;
+    left: 0;
+    margin-bottom: 15px; 
+    box-sizing: border-box;
+    position: inherit;
 }
 
 .aside_login input[type="submit"] {
@@ -208,7 +255,8 @@ footer a:hover {
     color: var(--white-color);
     border: none;
     border-radius: 5px;
-    margin: 10px auto 20px auto;
+    margin: 10px auto;
+    padding: 5px 10px;
 }
 
 .aside_login input[type="submit"]:hover {
@@ -220,10 +268,6 @@ footer a:hover {
     color: var(--white-color);
     border: none;
     border-radius: 5px;
-    margin: auto;
-}
-
-.info_hotel {
     margin: auto;
 }
 
