--- a/css/styles-registro.css
+++ b/css/styles-registro.css
@@ -5,6 +5,16 @@ body {
     box-sizing: border-box;
 }
 
+.error {
+    color: red;
+    font-size: 0.8em;
+    margin-top: 4px;
+    margin-left: 107px;
+    display: block;
+    font-weight: bold;
+}
+
+
 form {
     box-sizing: content-box;
     min-width: 360px;
