--- a/css/styles-registro.css
+++ b/css/styles-registro.css
@@ -100,10 +100,10 @@ label {
     width: fit-content;
 }
 
-.datos-personales label,
+/* .datos-personales label,
 .datos-acceso label {
-    /* text-align: right; */
-}
+     text-align: right; 
+} */
 
 .datos-personales .columna-fotografia label {
     text-align: left;
