--- a/css/styles-reservas.css
+++ b/css/styles-reservas.css
@@ -45,9 +45,9 @@
     color: red;
 }
 
-/* select # {
+select {
     position: static;
-} */
+}
 
 @media screen and (max-width: 600px) {
     .reservation__room-type {
